--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,15 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
+
+    services:
+      mysql:
+        image: mysql:8
+        env:
+          MYSQL_USER: root
+          MYSQL_PASSWORD: secret
+          MYSQL_DATABASE: simple_bank
+
     steps:
       - uses: actions/checkout@v3
 
@@ -19,6 +28,9 @@ jobs:
         with:
           go-version: 1.18
         id: go
+
+      - name: Run migration
+        run: make migrateup
 
       - name: Test
         run: go test -v ./...
