--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,8 @@ jobs:
           MYSQL_USER: root
           MYSQL_PASSWORD: secret
           MYSQL_DATABASE: simple_bank
+        ports:
+          - 3306:3306
 
     steps:
       - uses: actions/checkout@v3
@@ -28,6 +30,12 @@ jobs:
         with:
           go-version: 1.18
         id: go
+
+      - name: Install golang-migration
+        run: | 
+          curl -L https://github.com/golang-migrate/migrate/releases/download/v4.15.2/migrate.linux-amd64.tar.gz | tar xvz
+          sudo mv migrate.linux-amd64 /usr/bin/migrate
+          which migrate
 
       - name: Run migration
         run: make migrateup
