--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Install golang-migration
         run: | 
           curl -L https://github.com/golang-migrate/migrate/releases/download/v4.15.2/migrate.linux-amd64.tar.gz | tar xvz
+          find / -name "*migrate.linux-amd64*"
           sudo mv ./migrate.linux-amd64 /usr/bin/migrate
           which migrate
 
