--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,9 +33,9 @@ jobs:
 
       - name: Install golang-migration
         run: | 
+          cd /tmp
           curl -L https://github.com/golang-migrate/migrate/releases/download/v4.15.2/migrate.linux-amd64.tar.gz | tar xvz
-          find / -name "*migrate.linux-amd64*"
-          sudo mv ./migrate.linux-amd64 /usr/bin/migrate
+          sudo mv /tmp/migrate.linux-amd64 /usr/bin/migrate
           which migrate
 
       - name: Run migration
